@@ -1,9 +1,14 @@
 glibc (2.5-8) UNRELEASED; urgency=low
 
-  * debian/sysdeps/depflags.pl: Add a conflicts on binutils 
+  [ Aurelien Jarno ]
+  * debian/sysdeps/depflags.pl: Add a conflicts on binutils
     (<< 2.17cvs20070426-1) for libc-dev.  Closes: #422625.
 
- -- Aurelien Jarno <aurel32@debian.org>  Mon, 07 May 2007 14:39:15 +0200
+  [ Clint Adams ]
+  * debian/sysdeps/depflags.pl: Clean out relationships for packages
+    that do not exist in sarge or later.
+
+ -- Clint Adams <schizo@debian.org>  Tue, 08 May 2007 15:12:20 -0400
 
 glibc (2.5-7) unstable; urgency=low
 
